src/app/page.module.css
.key {
  /* background-color: white;
  display: inline;
  margin-right: 0.2rem; */
  /* min-width: 100%; */
  display: inline-flex;
  border-radius: 16px;
  border: 2px solid #e5e5e5;
  border-bottom: 7px solid #e5e5e5;
  margin: 5px;
  padding: 12px 16px;
  transition: all 0.1s;
}

/* .key.active {
  background-color: #60E100;
  border: 2px solid #60E100;
  border-bottom: 7px solid #60E100;
} */

.key.pinky-left {
  border: 2px solid red;
  border-bottom: 7px solid red; 
}

.key.ring-left {
  border: 2px solid orange;
  border-bottom: 7px solid orange; 
}

.key.middle-left {
  border: 2px solid blue;
  border-bottom: 7px solid blue; 
}

.key.index-left {
  border: 2px solid #60E100;
  border-bottom: 7px solid #60E100; 
}

.key.index-right {
  border: 2px solid purple;
  border-bottom: 7px solid purple; 
}

.key.middle-right {
  border: 2px solid yellow;
  border-bottom: 7px solid yellow; 
}

.key.ring-right {
  border: 2px solid brown;
  border-bottom: 7px solid brown; 
}

.key.pinky-right {
  border: 2px solid lightcoral;
  border-bottom: 7px solid lightcoral; 
}

.key.thumb-left {
  border: 2px solid rgb(26, 222, 160);
  border-bottom: 7px solid rgb(26, 222, 160); 
}

.letter-display {
  display: inline-flex;
  flex-wrap: nowrap;
  justify-content: space-between;
  overflow: visible;
}

.letter {
  display: inline-block;
  border-radius: 16px;
  border: 2px solid #e5e5e5;
  border-bottom: 4px solid #e5e5e5;
  margin: 10px;
  padding: 32px;
  font-size: 32px;
}

.letter.active {
  /* background-color: #60E100; */
  border: 2px solid #60E100;
  border-bottom: 4px solid #60E100;
  transition: all 0.1s ease-in;
}

.wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

#scroll-container {
  border: 2px solid #e5e5e5;


  display: flex;
  justify-content: center;
  overflow: hidden;
  width: 80%;
  margin: auto;
  font-size: 36pt;
}

#scroll {
  position: relative;
}

#scroll-center {
  color: #60E100;
}

#scroll-left,
#scroll-right {
  display: flex;
  position: absolute;
  top: 0;
}

#scroll-left {
  right: 100%;
}

#scroll-right {
  left: 100%;
}

.display-letter {
  border: 2px solid #e5e5e5;
  width: 1em;
  display: flex;
  justify-content: center;
}

.row {
  display: flex;
  justify-content: center;
  margin-bottom: 5px;
}

.row1 {
  margin-left: -5%;
}

.row2 {
  margin-left: 5%;
}

.row3 {
  margin-left: -0.7%;
}

